--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1794,3 +1794,11 @@ keywords = {environmental policy},
     pages = "458--466",
     keywords = {domain adaptation, negation, timelines, information extraction, health applications, shared task paper},
 }
+@inproceedings{acl2023-bootstrapping-zheng,
+    title = "Bootstrapping Neural Relation and Explanation Classifiers",
+    author = "Zheng Tang  and
+      Surdeanu, Mihai",
+    month = jul,
+    year = "2023",
+    publisher = "Association for Computational Linguistics",
+}
