--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1798,6 +1798,7 @@ keywords = {environmental policy},
     title = "Bootstrapping Neural Relation and Explanation Classifiers",
     author = "Zheng Tang  and
       Surdeanu, Mihai",
+    booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics (ACL)",
     month = jul,
     year = "2023",
     publisher = "Association for Computational Linguistics",
