--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,6 +1,6 @@
 
 @inproceedings{george-surdeanu-2023-sexually,  
-    title = "It{'}s not Sexually Suggestive; It{'}s Educative | Separating Sex Education from Suggestive Content on {T}ik{T}ok videos",  
+    title = "It{'}s not Sexually Suggestive; It{'}s Educative | Separating Sex Education from Suggestive Content on {T}ik{T}ok Videos",  
     author = "George, Enfa  and  
       Surdeanu, Mihai",  
     booktitle = "Findings of the Association for Computational Linguistics: ACL 2023",  
@@ -1494,12 +1494,19 @@ url={http://clulab.org/papers/meanteacherre19.pdf}
     url_Videos = {vhttps://clulab.org/papers/twoflints-ideo.mp4}
     eprint = {https://direct.mit.edu/coli/article-pdf/doi/10.1162/coli\_a\_00463/2046371/coli\_a\_00463.pdf},
 }
-@inproceedings{mithun2021students,
+@inproceedings{bastan2022-sume,
   title={SuMe: A Dataset Towards Summarizing Biomedical Mechanisms},
   author={Bastan, Mohaddeseh and Shankar, Nishant and Surdeanu, Mihai and Balasubramanian, Niranjan},
   booktitle={Proceedings of the 2022 LREC Conference},
   year={2022},
   url={http://clulab.org/papers/SuMe_LREC2022.pdf}
+}
+@inproceedings{bastan2023-structural,
+  title={NEUROSTRUCTURAL DECODING: Neural Text Generation with Structural Constraints},
+  author={Bastan, Mohaddeseh and Surdeanu, Mihai and Balasubramanian, Niranjan},
+  booktitle={Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics (ACL)},
+  year={2023},
+  url={https://aclanthology.org/2023.acl-long.528.pdf}
 }
 @inproceedings{rahimi2022bird,
   title={Do Transformer Networks Improve the Discovery of Rules from Text?},
@@ -1816,6 +1823,7 @@ keywords = {environmental policy},
     month = jul,
     year = "2023",
     publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.acl-short.5.pdf",
 }
 @inproceedings{alexeeva-etal-2020-mathalign,
     title = "{M}ath{A}lign: Linking Formula Identifiers to their Contextual Natural Language Descriptions",
