--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,13 @@
+@inproceedings{sushma-surdeanu-2023-sicck,
+    title = "Synthetic Dataset for Evaluating Complex Compositional Knowledge for Natural Language Inference",
+    author = "Akoju, Sushma, and Vacareanu, Robert and Riaz, Haris, and Blanco, Eduardo, and Surdeanu, Mihai",
+    booktitle = "to-be-released, Natural Language Reasoning and Structured Explanations Workshop, ACL 2023",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",  
+    publisher = "Association for Computational Linguistics", 
+    abstract = "We introduce a synthetic dataset called Sentences Involving Complex Compositional Knowledge (SICCK) and a novel analysis that investigates the performance of Natural Language Inference (NLI) models to understand compositionality in logic. We produce 1,304 sentence pairs by modifying 15 examples from the SICK dataset (Marelli et al., 2014). To this end, we modify the original texts using a set of phrases – modifiers that correspond to universal quantifiers, existential quantifiers, negation, and other concept modifiers in Natural Logic (NL) (MacCartney, 2009). We use these phrases to modify the subject, verb, and object parts of the premise and hypothesis. Lastly, we annotate these modified texts with the corresponding entailment labels following NL rules. We conduct a preliminary verification of how well the change in the structural and semantic composition is captured by neural NLI models, in both zero-shot and fine-tuned scenarios. We found that the performance of NLI models under the zero-shot setting is poor, especially for modified sentences with negation and existential quantifiers. After fine-tuning this dataset, we observe that models continue to perform poorly over negation, existential and universal modifiers.",
+}
 
 @inproceedings{george-surdeanu-2023-sexually,  
     title = "It{'}s not Sexually Suggestive; It{'}s Educative | Separating Sex Education from Suggestive Content on {T}ik{T}ok Videos",  
