--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1493,18 +1493,17 @@ url={http://clulab.org/papers/meanteacherre19.pdf}
     author = {Tang, Zheng and Surdeanu, Mihai},
     title = "{It Takes Two Flints to Make a Fire: Multitask Learning of Neural Relation and Explanation Classifiers}",
     journal = {Computational Linguistics},
-    pages = {1-40},
-    year = {2022},
-    month = {09},
-    abstract = "{We propose an explainable approach for relation extraction that mitigates the tension between generalization and explainability by jointly training for the two goals. Our approach uses a multi-task learning architecture, which jointly trains a classifier for relation extraction, and a sequence model that labels words in the context of the relation that explain the decisions of the relation classifier. We also convert the model outputs to rules to bring global explanations to this approach. This sequence model is trained using a hybrid strategy: supervised, when supervision from pre-existing patterns is available, and semi-supervised otherwise. In the latter situation, we treat the sequence model’s labels as latent variables, and learn the best assignment that maximizes the performance of the relation classifier. We evaluate the proposed approach on the two datasets and show that the sequence model provides labels that serve as accurate explanations for the relation classifier’s decisions, and, importantly, that the joint training generally improves the performance of the relation classifier. We also evaluate the performance of the generated rules and show that the new rules are great add-on to the manual rules and bring the rule-based system much closer to the neural models.}",
+    volume = {49},
+    number = {1},
+    pages = {117-156},
+    year = {2023},
+    month = {03},
+    abstract = "{We propose an explainable approach for relation extraction that mitigates the tension between generalization and explainability by jointly training for the two goals. Our approach uses a multi-task learning architecture, which jointly trains a classifier for relation extraction, and a sequence model that labels words in the context of the relations that explain the decisions of the relation classifier. We also convert the model outputs to rules to bring global explanations to this approach. This sequence model is trained using a hybrid strategy: supervised, when supervision from pre-existing patterns is available, and semi-supervised otherwise. In the latter situation, we treat the sequence model’s labels as latent variables, and learn the best assignment that maximizes the performance of the relation classifier. We evaluate the proposed approach on the two datasets and show that the sequence model provides labels that serve as accurate explanations for the relation classifier’s decisions, and, importantly, that the joint training generally improves the performance of the relation classifier. We also evaluate the performance of the generated rules and show that the new rules are a great add-on to the manual rules and bring the rule-based system much closer to the neural models.}",
     issn = {0891-2017},
     doi = {10.1162/coli_a_00463},
     url = {https://doi.org/10.1162/coli\_a\_00463},
-    url_Slides = {https://clulab.org/papers/twoflints-slides.pptx},
-    url_Videos = {vhttps://clulab.org/papers/twoflints-ideo.mp4}
-    eprint = {https://direct.mit.edu/coli/article-pdf/doi/10.1162/coli\_a\_00463/2046371/coli\_a\_00463.pdf},
+    eprint = {https://direct.mit.edu/coli/article-pdf/49/1/117/2068962/coli\_a\_00463.pdf},
 }
-
 @inproceedings{bastan2022-sume,
   title={SuMe: A Dataset Towards Summarizing Biomedical Mechanisms},
   author={Bastan, Mohaddeseh and Shankar, Nishant and Surdeanu, Mihai and Balasubramanian, Niranjan},
