--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -910,6 +910,47 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
     url_Abstract = {http://clulab.org/papers/ai-in-agriculture2023-submitted-abstract.pdf}
     year = {2023}
 }
+@proceedings{clinicalnlp-2023-clinical,
+    title = "Proceedings of the 5th Clinical Natural Language Processing Workshop",
+    editor = "Naumann, Tristan  and
+      Ben Abacha, Asma  and
+      Bethard, Steven  and
+      Roberts, Kirk  and
+      Rumshisky, Anna",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.clinicalnlp-1.0",
+    keywords = {health applications},
+}
+@inproceedings{gonzalez-lopez-bethard-2023-transformer,
+    title = "Transformer-based cynical expression detection in a corpus of {S}panish {Y}ou{T}ube reviews",
+    author = "Gonzalez-Lopez, Samuel  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the 13th Workshop on Computational Approaches to Subjectivity, Sentiment, {\&} Social Media Analysis",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.wassa-1.18",
+    pages = "194--201",
+    keywords = {workshop paper, social media, sentiment},
+}
+@inproceedings{zhang-bethard-2023-improving,
+    title = "Improving Toponym Resolution with Better Candidate Generation, Transformer-based Reranking, and Two-Stage Resolution",
+    author = "Zhang, Zeyu  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the The 12th Joint Conference on Lexical and Computational Semantics (*SEM 2023)",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.starsem-1.6",
+    pages = "48--60",
+    keywords = {locations, information extraction},
+    note = {[Acceptance rate 47\%]},
+}
 @inproceedings{bozdag-etal-2023-arizonans,
     title = "Arizonans at {S}em{E}val-2023 Task 9: Multilingual Tweet Intimacy Analysis with {XLM}-{T}",
     author = "Bozdag, Nimet Beyza  and
