--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,13 @@
+@inproceedings{cooper-OTH-2023-EMNLP,
+    title = "Hiding in Plain Sight: Tweets with Hate Speech Masked by Homoglyphs",
+    author = "Portia Cooper and Mihai Surdeanu and Eduardo Blanco",
+    booktitle = "Findings of the Empirical Methods in Natural Language Processing: EMNLP 2023",
+    month = dec,
+    year = "2023",
+    url = "https://clulab.org/papers/Hiding_in_Plain_Sight_Tweets_with_Hate_Speech_Masked_by_Homoglyphs_EMNLP_2023.pdf"
+    publisher = "Empirical Methods in Natural Language Processing",
+}
+
 @inproceedings{kwak-et-al-nllp2023-error-analysis,
     title = "Transferring Legal Natural Language Inference Model from a US State to Another: What Makes It So Hard?",
     author = "Alice Kwak and Gaetano Forte and Derek Bambauer and Mihai Surdeanu",
