Added NeurIPS 2023 pub

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@inproceedings{
+    pyarelal2023the,
+    title={The To{MCAT} Dataset},
+    author={Adarsh Pyarelal and Eric Duong and Caleb Jones Shibu and Paulo Soares and Savannah Boyd and Payal Khosla and Valeria Pfeifer and Diheng Zhang and Eric S Andrews and Rick Champlin and Vincent Paul Raymond and Meghavarshini Krishnaswamy and Clayton Morrison and Emily Butler and Kobus Barnard},
+    booktitle={Thirty-seventh Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
+    year={2023},
+    url={https://openreview.net/forum?id=ZJWQfgXQb6}
+}
+
 @inproceedings{qamar-etal-2023-speaking,
     title = "Who is Speaking? Speaker-Aware Multiparty Dialogue Act Classification",
     author = "Qamar, Ayesha  and
