--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@inproceedings{anaissy-icaart2024,
+    title = "On Learning Bipolar Gradual Argumentation Semantics with Neural Networks",
+    author = "Caren Al Anaissy and Sandeep Suntwal and Mihai Surdeanu and Srdjan Vesic",
+    booktitle = "Proceedings of the 16th International Conference on Agents and Artificial Intelligence (ICAART)",
+    year = "2024",
+    url = "https://clulab.org/papers/icaart2024.pdf",
+    abstract = "Computational argumentation has evolved as a key area in artificial intelligence, used to analyze aspects of thinking, making decisions, and conversing. As a result, it is currently employed in a variety of real-world contexts, from legal reasoning to intelligence analysis. An argumentation framework is modelled as a graph where the nodes represent arguments and the edges of the graph represent relations (i.e., supports, attacks) between nodes. In this work, we investigate the ability of neural network methods to learn a gradual bipolar argumentation semantics, which allows for both supports and attacks. We begin by calculating the acceptability degrees for graph nodes. These scores are generated using Quantitative Argumentation Debate (QuAD) argumentation semantics. We apply this approach to two benchmark datasets: Twelve Angry Men and Debate- pedia. Using this data, we train and evaluate the performance of three benchmark architectures: Multilayer Perceptron (MLP), Graph Convolution Network (GCN), and Graph Attention Network (GAT) to learn the acceptability degree scores produced by the QuAD semantics. Our results show that these neural network methods can learn bipolar gradual argumentation semantics. The models trained on GCN architecture perform better than the other two architectures underscoring the importance of modelling argumentation graphs explicitly.",
+}
+
 @inproceedings{qamar-etal-2023-speaking,
     title = "Who is Speaking? Speaker-Aware Multiparty Dialogue Act Classification",
     author = "Qamar, Ayesha  and
