--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@misc{riaz2024ellen,
+      title={ELLEN: Extremely Lightly Supervised Learning For Efficient Named Entity Recognition}, 
+      author={Haris Riaz and Razvan-Gabriel Dumitru and Mihai Surdeanu},
+      year={2024},
+      eprint={2403.17385},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
 @inproceedings{anaissy-icaart2024,
     title = "On Learning Bipolar Gradual Argumentation Semantics with Neural Networks",
     author = "Caren Al Anaissy and Sandeep Suntwal and Mihai Surdeanu and Srdjan Vesic",
