Time Travel paper added

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@inproceedings{
+golchin2024time,
+title={Time Travel in {LLM}s: Tracing Data Contamination in Large Language Models},
+author={Shahriar Golchin and Mihai Surdeanu},
+booktitle={The Twelfth International Conference on Learning Representations},
+year={2024},
+url={https://openreview.net/forum?id=2Rwq6c3tvr}
+}
+
 @inproceedings{fahmida2024fs-meta-dataset,
     title = "Towards Realistic Few-Shot Relation Extraction: A New Meta Dataset and Evaluation",
     author = "Fahmida Alam and Md Asiful Islam and Robert Vacareanu and Mihai Surdeanu ",
