--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -52,13 +52,12 @@
     publisher = "Association for Computational Linguistics"
 }
 
-@inproceedings{
-golchin2024time,
-title={Time Travel in {LLM}s: Tracing Data Contamination in Large Language Models},
-author={Shahriar Golchin and Mihai Surdeanu},
-booktitle={The Twelfth International Conference on Learning Representations},
-year={2024},
-url={https://openreview.net/forum?id=2Rwq6c3tvr}
+@inproceedings{golchin2024time,
+	title={Time Travel in {LLM}s: Tracing Data Contamination in Large Language Models},
+	author={Shahriar Golchin and Mihai Surdeanu},
+	booktitle={Proceedings of the Twelfth International Conference on Learning Representations (ICLR)},
+	year={2024},
+	url={https://openreview.net/forum?id=2Rwq6c3tvr}
 }
 
 @inproceedings{fahmida2024fs-meta-dataset,
