--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -43,7 +43,7 @@
     abstract = "We explore how weak supervision on abundant unlabeled data can be leveraged to improve few-shot performance in aspect-based sentiment analysis (ABSA) tasks. We propose a pipeline approach to construct a noisy ABSA dataset, and we use it to adapt a pre-trained sequence-to-sequence model to the ABSA tasks. We test the resulting model on three widely used ABSA datasets, before and after fine-tuning. Our proposed method preserves the full fine-tuning performance while showing significant improvements (15.84 absolute F1) in the few-shot learning scenario for the harder tasks. In zero-shot (i.e., without fine-tuning), our method outperforms the previous state of the art on the aspect extraction sentiment classification (AESC) task and is, additionally, capable of performing the harder aspect sentiment triplet extraction (ASTE) task.",
 }
 
-@article{wang2024naaclfindings,
+@inproceedings{wang2024naaclfindings,
     title = "Interpreting Answers to Yes-No Questions in Dialogues from Multiple Domains",
     author = "Wang, Zijie and Rashid, Farzana and Blanco, Eduardo",
     booktitle = "Findings of the Association for Computational Linguistics: NAACL 2024",
