--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@article{Vacareanu2024LLMsRegression,
+  title={From Words to Numbers: Your Large Language Model Is Secretly A Capable Regressor When Given In-Context Examples},
+  author={Robert Vacareanu and Vlad-Andrei Negru and Vasile Suciu and Mihai Surdeanu},
+  journal={ArXiv},
+  year={2024},
+  volume={abs/2404.07544},
+  url={https://arxiv.org/pdf/2404.07544.pdf}
+}
+
 @inproceedings{vacareanu2024softrules,
     title = "Best of Both Worlds: A Pliable and Generalizable Neuro-Symbolic Approach for Relation Classification",
     author = "Robert Vacareanu and Fahmida Alam and Md Asiful Islam and Haris Riaz and Mihai Surdeanu",
