--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@article{Vacareanu2024GeneralVerificationLLM,
+  title={General Purpose Verification for Chain of Thought Prompting},
+  author={Robert Vacareanu and Anurag Pratik and Evangelia Spiliopoulou and Zheng Qi and Giovanni Paolini and Neha Anna John and Jie Ma and Yassine Benajiba and Miguel Ballesteros},
+  journal={ArXiv},
+  year={2024},
+  volume={abs/2405.00204},
+  url={https://arxiv.org/pdf/2405.00204.pdf}
+}
+
 @article{Vacareanu2024LLMsRegression,
   title={From Words to Numbers: Your Large Language Model Is Secretly A Capable Regressor When Given In-Context Examples},
   author={Robert Vacareanu and Vlad-Andrei Negru and Vasile Suciu and Mihai Surdeanu},
