added naacl css paper

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@inproceedings{
+  dumitru2024retrieval,
+  title={Retrieval Augmented Generation of Subjective Explanations for Socioeconomic Scenarios},
+  author={Dumitru, Razvan-Gabriel and Alexeeva, Maria and Alcock, Keith and Ludgate, Nargiza and Jeong, Cheonkam and Abdurahaman, Zara Fatima and Puri, Prateek and Kirchhoff, Brian and Sadhu, Santadarshan and Surdeanu, Mihai},
+  booktitle={Sixth Workshop on  NLP and Computational Social Science (at NAACL) 2024},
+  year={2024},
+  url={http://clulab.org/papers/naacl-css2024-rag.pdf}
+}
+
 @article{Vacareanu2024GeneralVerificationLLM,
   title={General Purpose Verification for Chain of Thought Prompting},
   author={Robert Vacareanu and Anurag Pratik and Evangelia Spiliopoulou and Zheng Qi and Giovanni Paolini and Neha Anna John and Jie Ma and Yassine Benajiba and Miguel Ballesteros},
