--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1119,6 +1119,94 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
     url_Abstract = {http://clulab.org/papers/ai-in-agriculture2023-submitted-abstract.pdf}
     year = {2023}
 }
+@inproceedings{su-etal-2024-semi-structured,
+    title = "Semi-Structured Chain-of-Thought: Integrating Multiple Sources of Knowledge for Improved Language Model Reasoning",
+    author = "Xin Su and Tiep Le and Steven Bethard and Phillip Howard",
+    editor = "Kevin Duh and Helena Gomez and Steven Bethard",
+    booktitle = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 2: Short Papers)",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.naacl-long.468",
+    pages = "8478?8494",
+    keywords = {locations, information extraction},
+    note = {[Acceptance rate 23\%]},
+}
+@inproceedings{zhang-etal-2024-improving,
+    title = "Improving Toponym Resolution by Predicting Attributes to Constrain Geographical Ontology Entries",
+    author = "Zeyu Zhang and Egoitz Laparra and Steven Bethard",
+    editor = "Kevin Duh and Helena Gomez and Steven Bethard",
+    booktitle = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 2: Short Papers)",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.naacl-short.3",
+    pages = "35?44",
+    keywords = {locations, information extraction},
+    note = {[Acceptance rate 23\%]},
+}
+@incollection{Bethard2024,
+author="Bethard, Steven",
+editor="Xu, Hua
+and Demner Fushman, Dina",
+title="Machine Learning and Deep Learning Algorithms",
+bookTitle="Natural Language Processing in Biomedicine: A Practical Guide",
+year="2024",
+publisher="Springer International Publishing",
+address="Cham",
+pages="43--76",
+isbn="978-3-031-55865-8",
+doi="10.1007/978-3-031-55865-8_3",
+url="https://doi.org/10.1007/978-3-031-55865-8_3"
+}
+@article{zhang_survey_2024,
+	title = {A survey on geocoding: algorithms and datasets for toponym resolution},
+	issn = {1574-0218},
+	shorttitle = {A survey on geocoding},
+	url = {https://doi.org/10.1007/s10579-024-09730-2},
+	doi = {10.1007/s10579-024-09730-2},
+	language = {en},
+	urldate = {2024-06-12},
+	journal = {Language Resources and Evaluation},
+	author = {Zhang, Zeyu and Bethard, Steven},
+	month = jun,
+	year = {2024},
+	keywords = {Geocoding, Geographical entity normalization, Toponym resolution},
+}
+@article{barbati-etal-2024-examining,
+author = {Juliana L. Barbati and Stephen A. Rains and Kate Kenski and Yotam Shmargad and Steven Bethard and Kevin Coe},
+title = {Examining the Dynamics of Uncivil Discourse Between Sub-National Political Officials and the Public on Twitter},
+journal = {Mass Communication and Society},
+volume = {0},
+number = {0},
+pages = {1-20},
+month = feb,
+year = {2024},
+publisher = {Routledge},
+url = {https://doi.org/10.1080/15205436.2024.2313095},
+keywords = {social media, civility},
+}
+@inproceedings{su-etal-2023-fusing,
+    title = "Fusing Temporal Graphs into Transformers for Time-Sensitive Question Answering",
+    author = "Su, Xin  and
+      Howard, Phillip  and
+      Hakim, Nagib  and
+      Bethard, Steven",
+    editor = "Bouamor, Houda  and
+      Pino, Juan  and
+      Bali, Kalika",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2023",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.findings-emnlp.67",
+    doi = "10.18653/v1/2023.findings-emnlp.67",
+    pages = "948--966",
+    keywords = {timelines, question answering},
+}
 @proceedings{clinicalnlp-2023-clinical,
     title = "Proceedings of the 5th Clinical Natural Language Processing Workshop",
     editor = "Naumann, Tristan  and
