--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1177,33 +1177,128 @@ the retrieved sentences; and (c) effective and faithful explanations when answer
     url_Abstract = {http://clulab.org/papers/ai-in-agriculture2023-submitted-abstract.pdf}
     year = {2023}
 }
-@inproceedings{su-etal-2024-semi-structured,
-    title = "Semi-Structured Chain-of-Thought: Integrating Multiple Sources of Knowledge for Improved Language Model Reasoning",
-    author = "Xin Su and Tiep Le and Steven Bethard and Phillip Howard",
-    editor = "Kevin Duh and Helena Gomez and Steven Bethard",
-    booktitle = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 2: Short Papers)",
+@inproceedings{song-etal-2024-metadata,
+    title = "Metadata Enhancement Using Large Language Models",
+    author = "Song, Hyunju  and
+      Bethard, Steven  and
+      Thomer, Andrea",
+    editor = "Ghosal, Tirthankar  and
+      Singh, Amanpreet  and
+      Waard, Anita  and
+      Mayr, Philipp  and
+      Naik, Aakanksha  and
+      Weller, Orion  and
+      Lee, Yoonjoo  and
+      Shen, Shannon  and
+      Qin, Yanxia",
+    booktitle = "Proceedings of the Fourth Workshop on Scholarly Document Processing (SDP 2024)",
+    month = aug,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.sdp-1.14",
+    pages = "145--154",
+    keywords = {workshop paper, term normalization},
+}
+@inproceedings{crum-bethard-2024-hinoki,
+    title = "hinoki at {S}em{E}val-2024 Task 7: Numeral-Aware Headline Generation ({E}nglish)",
+    author = "Crum, Hinoki  and
+      Bethard, Steven",
+    editor = {Ojha, Atul Kr.  and
+      Do{\u{g}}ru{\"o}z, A. Seza  and
+      Tayyar Madabushi, Harish  and
+      Da San Martino, Giovanni  and
+      Rosenthal, Sara  and
+      Ros{\'a}, Aiala},
+    booktitle = "Proceedings of the 18th International Workshop on Semantic Evaluation (SemEval-2024)",
     month = jun,
     year = "2024",
     address = "Mexico City, Mexico",
     publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2024.naacl-long.468",
-    pages = "8478?8494",
-    keywords = {locations, information extraction},
+    url = "https://aclanthology.org/2024.semeval-1.6",
+    doi = "10.18653/v1/2024.semeval-1.6",
+    pages = "34--39",
+    keywords = {shared task paper},
+}
+@inproceedings{su-etal-2024-semi,
+    title = "Semi-Structured Chain-of-Thought: Integrating Multiple Sources of Knowledge for Improved Language Model Reasoning",
+    author = "Su, Xin  and
+      Le, Tiep  and
+      Bethard, Steven  and
+      Howard, Phillip",
+    booktitle = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.naacl-long.475",
+    doi = "10.18653/v1/2024.naacl-long.475",
+    pages = "8597--8613",
+    keywords = {question answering},
     note = {[Acceptance rate 23\%]},
 }
-@inproceedings{zhang-etal-2024-improving,
+@inproceedings{zhang-etal-2024-improving-toponym,
     title = "Improving Toponym Resolution by Predicting Attributes to Constrain Geographical Ontology Entries",
-    author = "Zeyu Zhang and Egoitz Laparra and Steven Bethard",
-    editor = "Kevin Duh and Helena Gomez and Steven Bethard",
+    author = "Zhang, Zeyu  and
+      Laparra, Egoitz  and
+      Bethard, Steven",
     booktitle = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 2: Short Papers)",
     month = jun,
     year = "2024",
     address = "Mexico City, Mexico",
     publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2024.naacl-short.3",
-    pages = "35?44",
-    keywords = {locations, information extraction},
+    doi = "10.18653/v1/2024.naacl-short.3",
+    pages = "35--44",
+    keywords = {geospatial normalization, information extraction},
     note = {[Acceptance rate 23\%]},
+}
+@proceedings{clinicalnlp-2024-clinical,
+    title = "Proceedings of the 6th Clinical Natural Language Processing Workshop",
+    editor = "Naumann, Tristan  and
+      Ben Abacha, Asma  and
+      Bethard, Steven  and
+      Roberts, Kirk  and
+      Bitterman, Danielle",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.clinicalnlp-1.0",
+    keywords = "health",
+}
+@proceedings{findings-2024-findings-association,
+    title = "Findings of the Association for Computational Linguistics: NAACL 2024",
+    editor = "Duh, Kevin  and
+      Gomez, Helena  and
+      Bethard, Steven",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.findings-naacl.0",
+}
+@proceedings{naacl-2024-long,
+    title = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)",
+    editor = "Duh, Kevin  and
+      Gomez, Helena  and
+      Bethard, Steven",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.naacl-long.0",
+}
+@proceedings{naacl-2024-short,
+    title = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 2: Short Papers)",
+    editor = "Duh, Kevin  and
+      Gomez, Helena  and
+      Bethard, Steven",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.naacl-short.0",
 }
 @incollection{Bethard2024,
 author="Bethard, Steven",
@@ -1217,7 +1312,8 @@ address="Cham",
 pages="43--76",
 isbn="978-3-031-55865-8",
 doi="10.1007/978-3-031-55865-8_3",
-url="https://doi.org/10.1007/978-3-031-55865-8_3"
+url="https://doi.org/10.1007/978-3-031-55865-8_3",
+keywords={machine learning},
 }
 @article{zhang_survey_2024,
 	title = {A survey on geocoding: algorithms and datasets for toponym resolution},
