--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,13 @@
+@misc{cooper2024findingwolfsheepsclothing,
+      title={Finding a Wolf in Sheep's Clothing: Combating Adversarial Text-To-Image Prompts with Text Summarization}, 
+      author={Portia Cooper and Harshita Narnoli and Mihai Surdeanu},
+      year={2024},
+      eprint={2412.12212},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2412.12212}, 
+}
+
 @inproceedings{kwak-et-al-nllp2024-error-analysis,
     title = "Classify First, and Then Extract: Prompt Chaining Technique for Information Extraction",
     author = "Alice Kwak and Clayton Morrison and Derek Bambauer and Mihai Surdeanu",
