--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,25 @@
+@inproceedings{noriega-atala-etal-2024-happen,
+    title = "When and Where Did it Happen? An Encoder-Decoder Model to Identify Scenario Context",
+    author = "Noriega-Atala, Enrique  and
+      Vacareanu, Robert  and
+      Ashton, Salena Torres  and
+      Pyarelal, Adarsh  and
+      Morrison, Clayton T  and
+      Surdeanu, Mihai",
+    editor = "Al-Onaizan, Yaser  and
+      Bansal, Mohit  and
+      Chen, Yun-Nung",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2024",
+    month = nov,
+    year = "2024",
+    address = "Miami, Florida, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.findings-emnlp.219/",
+    doi = "10.18653/v1/2024.findings-emnlp.219",
+    pages = "3821--3829",
+    abstract = "We introduce a neural architecture finetuned for the task of scenario context generation: The relevant location and time of an event or entity mentioned in text. Contextualizing information extraction helps to scope the validity of automated finings when aggregating them as knowledge graphs. Our approach uses a high-quality curated dataset of time and location annotations in a corpus of epidemiology papers to train an encoder-decoder architecture. We also explored the use of data augmentation techniques during training. Our findings suggest that a relatively small fine-tuned encoder-decoder model performs better than out-of-the-box LLMs and semantic role labeling parsers to accurate predict the relevant scenario information of a particular entity or event."
+}
+
 @misc{cooper2024findingwolfsheepsclothing,
       title={Finding a Wolf in Sheep's Clothing: Combating Adversarial Text-To-Image Prompts with Text Summarization}, 
       author={Portia Cooper and Harshita Narnoli and Mihai Surdeanu},
