--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,12 @@
+@inproceedings{negru-et-al-naacl2025-morphnli,
+    title = "MorphNLI: A Stepwise Approach to Natural Language Inference Using Text Morphing",
+    author = "Vlad Negru and Robert Vacareanu and Camelia Lemnaru and Mihai Surdeanu and Rodica Potolea",
+    booktitle = "Findings of the 2025 Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL)",
+    year = "2025",
+    url = "https://arxiv.org/abs/2502.09567",
+    abstract = "We introduce MorphNLI, a modular step-by-step approach to natural language inference (NLI). When classifying the premise-hypothesis pairs into {entailment, contradiction, neutral}, we use a language model to generate the necessary edits to incrementally transform (i.e., morph) the premise into the hypothesis. Then, using an off-the-shelf NLI model we track how the entailment progresses with these atomic changes, aggregating these intermediate labels into a final output. We demonstrate the advantages of our proposed method particularly in realistic cross-domain settings, where our method always outperforms strong baselines with improvements up to 12.6% (relative). Further, our proposed approach is explainable as the atomic edits can be used to understand the overall NLI label.",
+}
+
 @inproceedings{noriega-atala-etal-2024-happen,
     title = "When and Where Did it Happen? An Encoder-Decoder Model to Identify Scenario Context",
     author = "Noriega-Atala, Enrique  and
