--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,16 @@
+@inproceedings{rezaei-blanco-2024-paraphrasing,
+  author    = {Rezaei, MohammadHossein  and  Blanco, Eduardo},
+  title     = {Making Language Models Robust Against Negation},
+  booktitle      = {Proceedings of the 2025 Conference of the Nations of America Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month          = {April},
+  year           = {2025},
+  address        = {Albuquerque, New Mexico, USA},
+  publisher      = {Association for Computational Linguistics},
+  pages     = {},
+  abstract  = {Negation has been a long-standing challenge for language models. Previous studies have shown that they struggle with negation in many natural language understanding tasks. In this work, we propose a self-supervised method to make language models more robust against negation. We introduce a novel task, Next Sentence Polarity Prediction (NSPP), and a variation of the Next Sentence Prediction (NSP) task. We show that RoBERTa and BERT further pre-trained on our tasks outperform the off-the-shelf transformer models on eight negation-related benchmarks. Most notably, the pretrainings yield between 1.8% and 9.1% improvement on CondaQA, a large question-answering corpus requiring reasoning over negation.},
+  url       = {https://arxiv.org/pdf/2502.07717}
+}
+
 @inproceedings{negru-et-al-naacl2025-morphnli,
     title = "MorphNLI: A Stepwise Approach to Natural Language Inference Using Text Morphing",
     author = "Vlad Negru and Robert Vacareanu and Camelia Lemnaru and Mihai Surdeanu and Rodica Potolea",
@@ -61,16 +74,21 @@
 }
 
 @inproceedings{rezaei-blanco-2024-paraphrasing,
-  author    = {Rezaei, MohammadHossein  and  Blanco, Eduardo},
-  title     = {Paraphrasing in Affirmative Terms Improves Negation Understanding},
-  booktitle      = {Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
-  month          = {August},
-  year           = {2024},
-  address        = {Bangkok, Thailand},
-  publisher      = {Association for Computational Linguistics},
-  pages     = {},
-  abstract  = {Negation is a common linguistic phenomenon. Yet language models face challenges with negation in many natural language understanding tasks such as question answering and natural language inference. In this paper, we experiment with seamless strategies that incorporate affirmative interpretations (i.e., paraphrases without negation) to make models more robust against negation. Crucially, our affirmative interpretations are obtained automatically. We show improvements with CondaQA, a large corpus requiring reasoning with negation, and five natural language understanding tasks.},
-  url       = {https://arxiv.org/pdf/2406.07492}
+    title = "Paraphrasing in Affirmative Terms Improves Negation Understanding",
+    author = "Rezaei, MohammadHossein  and
+      Blanco, Eduardo",
+    editor = "Ku, Lun-Wei  and
+      Martins, Andre  and
+      Srikumar, Vivek",
+    booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)",
+    month = aug,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.acl-short.55/",
+    doi = "10.18653/v1/2024.acl-short.55",
+    pages = "602--615",
+    abstract = "Negation is a common linguistic phenomenon. Yet language models face challenges with negation in many natural language understanding tasks such as question answering and natural language inference. In this paper, we experiment with seamless strategies that incorporate affirmative interpretations (i.e., paraphrases without negation) to make models more robust against negation. Crucially, our affirmative interpretations are obtained automatically. We show improvements with CondaQA, a large corpus requiring reasoning with negation, and five natural language understanding tasks."
 }
 
 @inproceedings{sanayei-etal-2024-maria,
